removed some comments

--- a/assignment_2/assignment-2-reddit-data-collection-public.ipynb
+++ b/assignment_2/assignment-2-reddit-data-collection-public.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Method #1 - querying for new posts\n",
-    "queried_subreddits = set([]) # obtained on sept 16th at 4:44 MTL Time\n",
+    "queried_subreddits = set([])\n",
     "\n",
     "all_of_reddit = reddit.subreddit('all')\n",
     "#print(all_of_reddit.display_name)\n",
