added print statements

--- a/assignment_2/assignment-2-reddit-data-collection-public.ipynb
+++ b/assignment_2/assignment-2-reddit-data-collection-public.ipynb
@@ -116,10 +116,14 @@
     "print('number of queried subreddits: {}'.format(str(len(queried_subreddit_subscribers))))\n",
     "print('the queried subreddits had on average {} subscribers'.format(str(queried_subscriber_mean)))\n",
     "print('the sample standard deviation of the number of subscribers for the queried subreddits was: {}'.format(str(queried_subscriber_sample_sd)))\n",
+    "print('the queried subreddits had on median of {} subscribers'.format(str(median(queried_subreddit_subscribers))))\n",
+    "print('the queried subreddits had a subscriber counts ranging from {} to {}'.format(str(min(queried_subreddit_subscribers)), str(max(queried_subreddit_subscribers))))\n",
     "print('----')\n",
-    "print('number of randomly sampled subreddits: {}'.format(str(len(sampled_subreddit_subscribers))))\n",
-    "print('the randomly sampled subreddits had on average {} subscribers'.format(str(sampled_subscriber_mean)))\n",
-    "print('the sample standard deviation of the number of subscribers for the randomly sampled subreddits was: {}'.format(str(sampled_subscriber_sample_sd)))"
+    "print('number of randomly subsampled subreddits: {}'.format(str(len(sampled_subreddit_subscribers))))\n",
+    "print('the randomly subsampled subreddits had on average {} subscribers'.format(str(sampled_subscriber_mean)))\n",
+    "print('the sample standard deviation of the number of subscribers for the randomly subsampled subreddits was: {}'.format(str(sampled_subscriber_sample_sd)))\n",
+    "print('the randomly subsampled subreddits had on median of {} subscribers'.format(str(median(sampled_subreddit_subscribers))))\n",
+    "print('the randomly subsampled subreddits had a subscriber counts ranging from {} to {}'.format(str(min(sampled_subreddit_subscribers)), str(max(sampled_subreddit_subscribers))))"
    ]
   },
   {
