--- a/assignment_2/assignment-2-reddit-data-collection-public.ipynb
+++ b/assignment_2/assignment-2-reddit-data-collection-public.ipynb
@@ -146,12 +146,12 @@
    "source": [
     "trace0 = go.Box(\n",
     "    y=queried_subreddit_subscribers,\n",
-    "    name=\"Queried Subreddits' Subscribers\",\n",
+    "    name=\"Queried Subreddits\",\n",
     "    boxmean=True\n",
     ")\n",
     "trace1 = go.Box(\n",
     "    y=sampled_subreddit_subscribers,\n",
-    "    name=\"Sampled Subreddits' Subscribers\",\n",
+    "    name=\"Randomly-Subsampled Subreddits\",\n",
     "    boxmean=True\n",
     ")\n",
     "\n",
